# Programming-Assignment-3

./: .gitignore  CMakeLists.txt
base/PROJ_WIN/P6/P6/: P6.vcxproj  P6.vcxproj.filters
base/PROJ_WIN/P6/SOIL/: SOIL.vcxproj
base/res/shaders/: diagnostic.frag  forward_frag.glsl  forward_vert.glsl  point.frag  post.frag
base/src/: Camera.cpp  Camera.h  DeviceMesh.cpp  DeviceMesh.h  InstantRadiosity.cpp  InstantRadiosity.h  Light.cpp  Mesh.cpp  Mesh.h  SystemContext.cpp  SystemContext.h  Utility.cpp  Utility.h  main.cpp  main.h
res/cornell/: cornell_box.mtl
res/shaders/: ambient.frag  directional.frag  forward_frag.glsl  post.frag  post.vert  quad.fragment.glsl  quad.vertex.glsl  screen_draw.fragment.glsl  screen_draw.vertex.glsl  shadow.fragment.glsl  shadow.vertex.glsl
shared32/embree2/include/embree2/: rtcore.isph
shared32/embree2/lib/: embree.lib
shared32/embree2/lib/cmake/embree-2.6.2/: embree-config-version.cmake
src/: Camera.cpp  Camera.h  DeviceMesh.cpp  IlluminationCut.cpp  IlluminationCut.h  InstantRadiosity.cpp  InstantRadiosity.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  SystemContext.cpp  SystemContext.h  Utility.cpp  Utility.h  camera.cpp  camera.h  device_mesh.cpp  device_mesh.h  gl_snippets.h  host_mesh.cpp  host_mesh.h  main.cpp  main.h  quad_old_code.inl  random.h  raytracer.cpp  raytracer.h  save_image.h  system_context.cpp  system_context.h  utility.cpp  utility.h
